# zero-to-production

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  sqlx-data.json
configuration/: base.yaml
db_migration/: Dockerfile  init.sh
migrations/: 20221204033947_create_subscriptions_table.sql  20221204034017_add_status_to_subscriptions.sql  20221204034150_make_status_not_null_in_subscriptions.sql  20221204034229_create_subscription_tokens_table.sql  20221204034309_create_users_table.sql  20221204034345_rename_password_column.sql  20221204034422_add_salt_to_users.sql  20221204034447_remove_salt_from_users.sql  20221204034527_seed_user.sql  20221204040140_create_idempotency_table.sql  20221204040630_relax_null_checks_on_idempotency..sql  20221204040640_create_newsletter_issues_table.sql  20221204040651_create_issue_delivery_queue_table.sql
src/: configuration.rs  issue_delivery_worker.rs  main.rs  session_state.rs  startup.rs
src/authentication/: middleware.rs  password.rs
src/idempotency/: persistence.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: post.rs
src/routes/login/: post.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
