[package]
name = "zero2prod"
version = "0.1.0"
authors = ["LukeMathWalker <rust@lpalmieri.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = "1"
config = { version = "0.13", default-features = false, features = ["yaml"] }
sqlx = { version = "0.6", default-features = false, features = ["runtime-actix-rustls", "macros", "mysql", "uuid", "chrono", "migrate", "offline", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies"] }
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
thiserror = "1.0"
serde-aux = "4"
unicode-segmentation = "1.10"
rand = { version = "0.8", features=["std_rng"] }
anyhow = "1.0"
base64 = "0.13"
argon2 = { version = "0.4", features = ["std"] }
validator = "0.16"
tracing-actix-web = "0.6"
secrecy = { version = "0.8", features = ["serde"] }
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
actix-session = { version = "0.6", features = ["redis-rs-tls-session"] }
serde_json = { version = "1.0", features = ["raw_value", "std"] }
actix-web-lab = "0.16"

[dev-dependencies]
once_cell = "1.16"
claim = "0.5.0"
quickcheck = "0.9"
quickcheck_macros = "0.9"
fake = "~2.3"
wiremock = "0.5"
linkify = "0.9"
serde_urlencoded = "0.7"